<resources>
    <string name="app_name">Spotify</string>

    <string name="hint_usuario">Usuario</string>
    <string name="hint_confirm_password">Confirmar Password</string>
    <string name="hint_remember">Remember me</string>
    <string name="button_login">Log in</string>
    <string name="linkregistro"><a href="">¡Crea una cuenta Gratis!</a>
    </string>

    <string name="hint_email">Correo Electronico</string>
    <string name="hint_password">Password</string>
    <string name="hint_usuario_registro">¿Cómo deberíamos llamarte?</string>
    <string name="linklogin"><a href="">¡Inicia Sesion!</a>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="trending_albums_for_you">Trending albums for you</string>
    <string name="the_getaway">The Getaway</string>
    <string name="red_hot_chili_peppers">Red Hot Chili Peppers</string>
    <string name="album_red_hot_chili_peppers">Album • Red Hot Chili Peppers</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="your_library">Your Library</string>
    <string name="your_downloads">Your Downloads</string>
    <string name="playlists">Playlists</string>
    <string name="edit_perfil">Editar perfil</string>
    <string name="your_top_genres">Playlist</string>
    <string name="artists">Artists</string>
    <string name="downloaded">Downloaded</string>
    <string name="plan">Premium para estudiantes</string>
</resources>