<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/spotifyblack">

        <ImageView
            android:id="@+id/ivLoginLogo"
            android:layout_width="@dimen/width_logo"
            android:layout_height="@dimen/height_logo"
            android:src="@drawable/spotify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/emailLayout"
            style="@style/LoginTextInputOuterFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:hint="@string/hint_email"
            android:textColorHint="@color/spotifycolor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLoginLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                style="@style/Theme.Music.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/LoginTextInputOuterFieldStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:drawablePadding="12dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/spotifycolor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/spotifycolor"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passET"
                style="@style/Theme.Music.EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/swRemember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordLayout"
            android:layout_margin="@dimen/margin_default"
            android:checked="false"
            android:hint="@string/hint_remember"
            android:textColorHint="@color/spotifycolor3"
            android:thumbTint="@color/spotifycolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            tools:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/swRemember"
            android:layout_margin="@dimen/margin_default"
            android:backgroundTint="@color/spotifycolor"
            android:text="LOG IN"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetpassword" />

        <TextView
            android:id="@+id/tvor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btlogin"
            android:layout_centerInParent="true"
            android:layout_margin="25dp"
            android:drawablePadding="12dp"
            android:text=" OR "
            android:textColor="@color/spotifycolor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btlogin" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_margin="@dimen/margin_default"
            android:onClick="openBrowser"
            android:src="@drawable/me_profile"
            android:tag="https://github.com/VictorDeGallegos"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desarrollador"

            />

        <Button
            android:id="@+id/btfacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvor"
            android:layout_margin="@dimen/margin_default"
            android:backgroundTint="#3b5998"
            android:text="Facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvor" />

        <Button
            android:id="@+id/btgoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btfacebook"
            android:layout_margin="@dimen/margin_default"
            android:backgroundTint="#DB4437"
            android:text="Google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btfacebook" />

        <TextView
            android:id="@+id/tvnocuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="¿No tiene cuenta?"
            android:textColor="@color/spotifycolor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btgoogle"

            />

        <TextView

            android:id="@+id/createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/linkregistro"
            android:textColor="@color/spotifycolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvnocuenta"
            tools:layout_editor_absoluteY="650dp" />

        <TextView
            android:id="@+id/desarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Desarrollado por"
            android:textColor="@color/spotifycolor2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createaccount"
            tools:layout_editor_absoluteY="650dp" />

        <TextView
            android:id="@+id/resetpassword"
            style="@style/Theme.Music.DarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/createaccount"
            android:layout_margin="10dp"
            android:text="Olvide mi contraseña"
            android:textColor="@color/spotifycolor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swRemember" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>